--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="assets/static/style.css">
         <script type="text/javascript" src="angular/angular.js"></script>
         <script type="text/javascript" src="angular-route/angular-route.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
+
         <script src="assets/app.js" charset="utf-8"></script>
 
         <script type="text/javascript" src="assets/factories/pollFactory.js"></script>
